<resources>
    <string name="app_name">CH Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="explore">Explore</string>
    <string name="my_list">My list</string>
    <string name="watch_list">Watch List</string>
    <string name="favorite_list">Favorite List</string>
    <string name="lists">LISTS</string>
    <string name="join_room">Join Room</string>
    <string name="community">COMMUNITY</string>
    <string name="search">Search</string>
    <string name="forward">Forward</string>
    <string name="profile">Profile</string>
    <string name="trending_now">Trending Now</string>
    <string name="popular">Popular</string>
    <string name="in_theatres">In Theatres</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="logo">Logo</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter password</string>
    <string name="movie_detail">Movie detail</string>
    <string name="more_like_this">More like this</string>
    <string name="synopsis">Synopsis</string>
    <string name="revenue">Revenue</string>
    <string name="budget">Budget</string>
    <string name="genres">Genres</string>
    <string name="countries">Countries</string>
    <string name="runtime">Runtime</string>
    <string name="overview">Overview</string>
    <string name="add_rating">Add Rating</string>
    <string name="add_watch_list">Add Watch List</string>
    <string name="star_room">Start Room</string>
    <string name="actors">Actors</string>
    <string name="on_the_air">On the Air</string>
    <string name="airing_today">Airing Today</string>
    <string name="most_popular">Most Popular</string>
    <string name="total_runtime">Total runtime</string>
    <string name="featured_provider">Featured Provider</string>
    <string name="popular_person">Popular Person</string>
    <string name="popular_movies">Popular movies</string>
    <string name="popular_series">Popular series</string>
    <string name="my_favorite_list">My favorite list</string>
    <string name="sign_out">Sign out</string>
    <string name="my_favorite_list_is_emplty">My favorite list is emplty</string>
    <string name="favorite_list_is_empty">Favorite list is empty</string>
    <string name="watchlist_is_empty">Watchlist is empty</string>
    <string name="enter_keywords">Enter keywords</string>
    <string name="start_seaching">Start Seaching</string>
    <string name="search_des">Search all of CH Movie for Movies, Series, ...</string>
    <string name="no_results">No Results</string>
    <string name="for_results">For \'%s\'</string>
    <string name="enter_room_code">Enter room code</string>
    <string name="enjoy_movies_together_with_your_friends">Enjoy Movies Together with Your Friends</string>
    <string name="gather_your_friends_for_an_unforgettable_movie_experience">Gather your friends for an unforgettable movie experience!</string>
    <string name="members">Members: &#160;</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="room_code">Room code: %1$s</string>
    <string name="chat_channel">Chat channel</string>
    <string name="network_error_please_try_again_later">Network error. Please try again later !</string>
    <string name="signup">Signup</string>
    <string name="recommend_today">Recommend Today</string>
    <string name="series_for_you">Series For You</string>
    <string name="rating_detail">Rating detail</string>
    <string name="your_rating">Your Rating</string>
    <string name="rating">Rating</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="rating_is_being_updated">Rating is being updated !</string>
    <string name="ch_movie">CH Movie</string>
    <string name="welcome_to">Welcome to</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="read_more">Read more</string>
    <string name="read_less">Read less</string>
</resources>