<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".presentation.room.JoinRoomFragment">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingLeft="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/tint_primary" />

    <TextView
        android:id="@+id/txtTitle"
        style="@style/Text_Heading3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:text="@string/enjoy_movies_together_with_your_friends"
        android:textAlignment="center"
        android:textColor="@color/tint_primary"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/txtDes"
        style="@style/Text_Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="6dp"
        android:text="@string/gather_your_friends_for_an_unforgettable_movie_experience"
        android:textAlignment="center"
        android:textColor="@color/tint_secondary"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/edtRoomCode"
        style="@style/InputStyle"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="20dp"
        android:drawableStart="@drawable/baseline_home_max_24"
        android:drawablePadding="10dp"
        android:drawableTint="@color/tint_secondary"
        android:hint="@string/enter_room_code"
        android:inputType="text"
        android:textCursorDrawable="@color/background_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDes" />

    <Button
        android:id="@+id/btnJoinRoom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:background="@drawable/button_primary_bg"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:text="@string/join_room"
        android:textAllCaps="false"
        android:textColor="@color/tint_primary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtRoomCode" />
</androidx.constraintlayout.widget.ConstraintLayout>