<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".presentation.rating.RatingDetailFragment">

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:paddingLeft="20dp"
        android:paddingTop="14dp"
        android:paddingEnd="20dp"
        android:paddingBottom="14dp"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/tint_primary" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Text_Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:text="@string/your_rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <TextView
        android:id="@+id/textView1"
        style="@style/Text_Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="35dp"
        android:paddingTop="10dp"
        android:text="@string/rating"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/tint_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/rvRating"
        android:paddingHorizontal="20dp"
        style="@style/App_RecyclerView_Horizontal"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:listitem="@layout/item_rating_button" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Text_Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="35dp"
        android:paddingTop="10dp"
        android:text="@string/comment"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/tint_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rvRating" />

    <EditText
        android:id="@+id/edtComment"
        android:layout_height="wrap_content"
        style="@style/InputStyle"
        android:hint="@string/comment"
        android:layout_marginHorizontal="20dp"
        android:inputType="textMultiLine"
        android:minLines="1"
        android:maxLines="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:paddingVertical="16dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@color/tint_secondary"
        android:textSize="18sp"
        android:background="@drawable/button_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtComment" />
</androidx.constraintlayout.widget.ConstraintLayout>